Fix overflow in gallery

--- a/src/components/GameOverview/GameOverview.module.css
+++ b/src/components/GameOverview/GameOverview.module.css
@@ -107,8 +107,10 @@
     div {
       display: flex;
       gap: 10px;
+      justify-content: center;
     }
     img {
+      width: 100%;
       max-width: 100px;
       border-radius: 5px;
       aspect-ratio: 16/9;
